@@ -11952,10 +11952,11 @@ $i$-th component is a \typ{VECSMALL} containing the indices of the elements
 in $O$ having the same value. Applied to the image of a function evaluated on
 some finite set, it computes the fibers of the function.
 
-\fun{GEN}{RgV_count}{GEN *pO} given a vector of objects $O = \kbd{*pO}$,
-return a \typ{VECSMALL} $E$ with $n$ components where $n$ is the number of
-distinct objects in $O$ and $E[i]$ is the multiplicity of object $O[i]$.
-Replace \kbd{*O} by the set of distinct objects. Shallow function.
+\fun{GEN}{RgV_reduce}{GEN O, GEN *pE} given a vector of objects $O$,
+return the vector $v$ (of the same type as $O$) of \emph{distinct} elements
+of $O$ and set a \typ{VECSMALL} $E$ with the same length as $v$, such
+that $E[i]$ is the multiplicity of object $v[i]$ in the original $O$.
+Shallow function.
 
 \fun{GEN}{sort_factor}{GEN y, void *data, int (*cmp)(void *,GEN,GEN)}:
 assuming \kbd{y} is a factorization matrix, sorts its rows in place (no copy
